[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/settings_menu.gd" id="1"]

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -260.0
offset_top = -210.0
offset_right = 260.0
offset_bottom = 210.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = 12.0
offset_right = -12.0
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="Title" type="Label" parent="Panel/VBox"]
layout_mode = 2
text = "Settings"
horizontal_alignment = 1

[node name="Tabs" type="TabContainer" parent="Panel/VBox"]
layout_mode = 2
size_flags_vertical = 3
current_tab = 0

[node name="SystemTab" type="VBoxContainer" parent="Panel/VBox/Tabs"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="SystemVBox" type="VBoxContainer" parent="Panel/VBox/Tabs/SystemTab"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 6

[node name="VolumeLabel" type="Label" parent="Panel/VBox/Tabs/SystemTab/SystemVBox"]
layout_mode = 2
text = "Master Volume"

[node name="VolumeSlider" type="HSlider" parent="Panel/VBox/Tabs/SystemTab/SystemVBox"]
layout_mode = 2
max_value = 100.0
value = 70.0

[node name="ResolutionLabel" type="Label" parent="Panel/VBox/Tabs/SystemTab/SystemVBox"]
layout_mode = 2
text = "Resolution"

[node name="ResolutionOption" type="OptionButton" parent="Panel/VBox/Tabs/SystemTab/SystemVBox"]
layout_mode = 2

[node name="GameTab" type="VBoxContainer" parent="Panel/VBox/Tabs"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="GameVBox" type="VBoxContainer" parent="Panel/VBox/Tabs/GameTab"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 6

[node name="PresetLabel" type="Label" parent="Panel/VBox/Tabs/GameTab/GameVBox"]
layout_mode = 2
text = "Move Preset"

[node name="PresetOption" type="OptionButton" parent="Panel/VBox/Tabs/GameTab/GameVBox"]
layout_mode = 2

[node name="PauseKeyLabel" type="Label" parent="Panel/VBox/Tabs/GameTab/GameVBox"]
layout_mode = 2
text = "Pause Key"

[node name="PauseKeyOption" type="OptionButton" parent="Panel/VBox/Tabs/GameTab/GameVBox"]
layout_mode = 2

[node name="ToggleHpKeyLabel" type="Label" parent="Panel/VBox/Tabs/GameTab/GameVBox"]
layout_mode = 2
text = "Toggle Enemy HP Key"

[node name="ToggleHpKeyOption" type="OptionButton" parent="Panel/VBox/Tabs/GameTab/GameVBox"]
layout_mode = 2

[node name="EnemyHpCheck" type="CheckBox" parent="Panel/VBox/Tabs/GameTab/GameVBox"]
layout_mode = 2
text = "Show Enemy Health Bar"
button_pressed = true

[node name="PauseHintCheck" type="CheckBox" parent="Panel/VBox/Tabs/GameTab/GameVBox"]
layout_mode = 2
text = "Show Key Hints In Pause"
button_pressed = true

[node name="CloseButton" type="Button" parent="Panel/VBox"]
layout_mode = 2
text = "Close"
